--- a/index.html
+++ b/index.html
@@ -7,59 +7,98 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dimega's games</title>
   <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="assets/styles/style.css">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500;900&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Alkalami&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/styles/style.css">
+
 
 
 
 </head>
 
 <body>
-  <header class="header">
+  <header>
+    <nav class="navbar bg-body-tertiary text-center">
+      <div class="container-fluid">
+        <img src="assets/images/logo.png" style="width: 128px;">
+        <a class="navbar-brand text-center" href="#">
+          <h1 style="font-family: 'Alkalami', serif; color: rgb(80, 80, 180); font-weight: 500; text-align: left;">
+            Dimega's games</h1>
+        </a>
+      </div>
+    </nav>
     <div class="logo">
-      <h1>Dimega's games</h1>
+
     </div>
   </header>
 
-  <div class="game-conteiner">
-    <div class="game-logo">
-      <img src="./assets/images/cover.png" alt="image">
-    </div>
-    <div class="game-info">
-      <p>MEMO - это интересная компьютерная игра для детей и взрослых, которая развивает внимание, логическое мышление,
-        память и умение анализировать.
-        В игре представленны разнообразные темы карточек, такие как цифры, фрукты, ягоды, сказки. Играйте с ребенком или
-        с друзьями.</p>
-      <p>
-        В игре нужно открывать карточки и искать одинаковые изображения на них. Если вы нашли две одинаковые картинки,
-        то они изчезают. Игра продолжается для тех пор, пока на поле не останется карточек.
-        Цель игры: открыть все карточки за меньшее число ходов.
-      </p>
-      <div class="link-buttons">
-        <div>
-          <img src="./assets/images/rustore_icon.webp">
-          <a href="https://apps.rustore.ru/app/ru.dimega.memp">RuStore</a>
+  <section class="game-section m-4">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 col-md-12">
+          <div>
+            <img src="./assets/images/cover.png" class="img-fluid" alt="image">
+          </div>
         </div>
+        <div class="col-lg-8 col-md-12">
+          <div>
+            <div>
+              <p>MEMO - это интересная компьютерная игра для детей и взрослых, которая развивает внимание, логическое
+                мышление,
+                память и умение анализировать.
+                В игре представленны разнообразные темы карточек, такие как цифры, фрукты, ягоды, сказки. Играйте с
+                ребенком
+                или
+                с друзьями.</p>
+              <p>
+                В игре нужно открывать карточки и искать одинаковые изображения на них. Если вы нашли две одинаковые
+                картинки,
+                то они изчезают. Игра продолжается для тех пор, пока на поле не останется карточек.
+                Цель игры: открыть все карточки за меньшее число ходов.
+              </p>
+            </div>
+            <div class="mt-5">
+              <a class="btn btn-outline-primary" href="https://apps.rustore.ru/app/ru.dimega.memp" role="button"
+                target="_blank">
+                <img src="./assets/images/rustore_icon.webp" class="btn-icon">
+                RuStore
+              </a>
+              <a class="btn btn-outline-primary" href="https://appgallery.huawei.com/app/C108763209" role="button"
+                target="_blank">
+                <img src="./assets/images/appgalery_icon.webp" class="btn-icon">
+                AppGallery
+              </a>
+              <a class="btn btn-outline-primary" href="https://yandex.ru/games/app/250940?utm_source=app_page"
+                role="button" target="_blank">
+                <img src="assets/images/yandex_games_icon.png" class="btn-icon">
+                Я.Игры
+              </a>
+              <a class="btn btn-outline-primary" href="https://vkplay.ru/play/game/memo_desktop/" role="button"
+                target="_blank"><img src="assets/images/vkplay_icon.webp" class="btn-icon">
+                <span>VK Play</span>
+              </a>
 
-        <div>
-          <img src="./assets/images/appgalery_icon.webp">
-          <a href="https://appgallery.huawei.com/app/C108763209">AppGallery</a>
-        </div>
-
-        <div>
-          <img src="./assets/images/appgalery_icon.webp">
-          <a href="https://appgallery.huawei.com/app/C108763209">Yandex Games</a>
-        </div>
-
-        <div>
-          <img src="./assets/images/appgalery_icon.webp">
-          <a href="https://appgallery.huawei.com/app/C108763209">VK Play</a>
+              <!-- <div class="btn btn-outline-secondary">
+                <img src="assets/images/vkplay_icon.webp" class="btn-icon">
+                <a href="https://vkplay.ru/play/game/memo_desktop/" class="btn-label">VK Play</a>
+              </div> -->
+            </div>
+          </div>
         </div>
       </div>
     </div>
+  </section>
+  <footer>
 
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
